Revert to use java 8 compatible source code, next release can support java 8+ jdk